complete HTML form

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <section class="container">
       <div class="cabin-section flex grid">
         <div class="child-img">
-          
           <img src="img/cabin.jpg" alt="" class="cabin" />
-          <div class="bg-img"></div>
+          <div class="bg-img cabin-bg"></div>
           <!-- <img src="img/random-pattern.svg" alt="" class="pattern-img"> -->
         </div>
-        <div class="child-text">
+        <div class="child-text child-text-right">
           <h3>Cabin</h3>
           <p>
             Illa argumenta propria videamus, cur omnia sint paria peccata.
@@ -33,7 +32,7 @@
       </div>
 
       <div class="teepees-section flex grid">
-        <div class="child-text teepees-text">
+        <div class="child-text child-text-left">
           <h3>Teepees</h3>
           <p>
             A quibus propter discendi cupiditatem videmus ultimas terras esse
@@ -43,16 +42,16 @@
         </div>
         <div class="child-img teepees-img">
           <img src="img/teepee.jpg" alt="" class="teepee" />
-          <div class="bg-img"></div>
+          <div class="bg-img teepees-bg"></div>
         </div>
       </div>
 
       <div class="fishing-section flex grid">
         <div class="child-img">
           <img src="img/fishing.jpg" alt="" class="fishing" />
-          <div class="bg-img"></div>
+          <div class="bg-img fishing-bg"></div>
         </div>
-        <div class="child-text">
+        <div class="child-text child-text-right">
           <h3>Fishing</h3>
           <p>
             Que Manilium, ab iisque M. Intellegi quidem, ut propter aliam
@@ -63,7 +62,7 @@
       </div>
 
       <div class="archery-section flex grid">
-        <div class="child-text">
+        <div class="child-text child-text-left">
           <h3>Archery</h3>
           <p>
             At ille pellit, qui permulcet sensum voluptate. Quid in isto egregio
@@ -71,18 +70,18 @@
             vero sum nescius esse utilitatem in historia.
           </p>
         </div>
-        <div class="child-img">
+        <div class="child-img archery-img">
           <img src="img/archery.jpg" alt="" class="archery" />
-          <div class="bg-img"></div>
+          <div class="bg-img archery-bg"></div>
         </div>
       </div>
 
       <div class="canoeing-section flex grid">
         <div class="child-img">
           <img src="img/canoeing.jpg" alt="" class="canoeing" />
-          <div class="bg-img"></div>
+          <div class="bg-img canoeing-bg"></div>
         </div>
-        <div class="child-text">
+        <div class="child-text child-text-right">
           <h3>Canoeing</h3>
           <p>
             Illa argumenta propria videamus, cur omnia sint paria peccata.
@@ -90,6 +89,34 @@
             esse moriens. In qua quid est boni praeter summam voluptatem.
           </p>
         </div>
+      </div>
+      <section class="accomodation">
+        <h2 class="price">Rent the whole place for $3,670/night.</h2>
+        <p class="people">Maximum of 40 people.</p>
+      </section>
+    </section>
+
+    <!-- Contact Us Section -->
+
+    <section class="contact-container">
+      <div class="contact-head">
+        <h3>Contact us to get started</h3>
+        <p>We'll reply when we get back from fishing.</p>
+      </div>
+      <div class="contact-details">
+        <form action="#">
+          <label for="name">Name</label>
+          <input type="text" name="name" placeholder="Enter Your Name">
+          
+          <label for="email">Email</label>
+          <input type="email" name="email" placeholder="Enter Your Email">
+
+          <label for="timeline">Timeline</label>
+          <input type="text" name="timeline" placeholder="Enter Expected Timeline">
+
+          <label for="message">Message</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </form>
       </div>
     </section>
   </body>
