--- a/index.html
+++ b/index.html
@@ -103,19 +103,37 @@
         <h3>Contact us to get started</h3>
         <p>We'll reply when we get back from fishing.</p>
       </div>
-      <div class="contact-details">
-        <form action="#">
-          <label for="name">Name</label>
-          <input type="text" name="name" placeholder="Enter Your Name">
+      <div class="form">
+        <form action="#" class="contact-details">
+          <div class="contact-from">
+            <label for="name">Name</label>
+            <input type="text" name="name"/>
+          </div>
+
+          <div class="contact-from">
+            <label for="email">Email</label>
+            <input type="email" name="email" />
+          </div>
+
+          <div class="contact-from timeline-sec">
+            <label for="timeline">Timeline</label>
+            <input
+              type="text"
+              name="timeline"
+              
+            />
+          </div>
+          <div class="contact-from message-sec">
+            <label for="message">Message</label>
+            <textarea
+              name="message"
+              id="message"
+            ></textarea>
+          </div>
           
-          <label for="email">Email</label>
-          <input type="email" name="email" placeholder="Enter Your Email">
-
-          <label for="timeline">Timeline</label>
-          <input type="text" name="timeline" placeholder="Enter Expected Timeline">
-
-          <label for="message">Message</label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <div class="contact-from btn-sec">
+          <button class="btn">SEND</button>
+          </div>
         </form>
       </div>
     </section>
