Desktop design complete

--- a/index.html
+++ b/index.html
@@ -97,45 +97,50 @@
     </section>
 
     <!-- Contact Us Section -->
-
     <section class="contact-container">
-      <div class="contact-head">
-        <h3>Contact us to get started</h3>
-        <p>We'll reply when we get back from fishing.</p>
-      </div>
-      <div class="form">
-        <form action="#" class="contact-details">
-          <div class="contact-from">
-            <label for="name">Name</label>
-            <input type="text" name="name"/>
-          </div>
+      <div class="container">
+        <div class="contact-head">
+          <h3>Contact us to get started</h3>
+          <p>We'll reply when we get back from fishing.</p>
+        </div>
+        <div class="form">
+          <form action="#" class="contact-details">
+            <div class="contact-from">
+              <label for="name">Name</label>
+              <input type="text" name="name" />
+            </div>
 
-          <div class="contact-from">
-            <label for="email">Email</label>
-            <input type="email" name="email" />
-          </div>
+            <div class="contact-from">
+              <label for="email">Email</label>
+              <input type="email" name="email" />
+            </div>
 
-          <div class="contact-from timeline-sec">
-            <label for="timeline">Timeline</label>
-            <input
-              type="text"
-              name="timeline"
-              
-            />
-          </div>
-          <div class="contact-from message-sec">
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-            ></textarea>
-          </div>
-          
-          <div class="contact-from btn-sec">
-          <button class="btn">SEND</button>
-          </div>
-        </form>
+            <div class="contact-from timeline-sec">
+              <label for="timeline">Timeline</label>
+              <input type="text" name="timeline" />
+            </div>
+            <div class="contact-from message-sec">
+              <label for="message">Message</label>
+              <textarea name="message" id="message"></textarea>
+            </div>
+
+            <div class="contact-from btn-sec">
+              <button class="btn">SEND</button>
+            </div>
+          </form>
+        </div>
       </div>
     </section>
+
+    <footer>
+      <p>W5723 Lake View Chester, CA 96020</p>
+      <p>Design by <span>Papaya.</span></p>
+      <div class="social-media">
+        <img src="img/facebook.svg" alt="" />
+        <img src="img/twitter.svg" alt="" />
+        <img src="img/instagram.svg" alt="" />
+      </div>
+      <p class="copyright">&copy; Camp Chippewa</p>
+    </footer>
   </body>
 </html>
