responsive site complete

--- a/index.html
+++ b/index.html
@@ -136,9 +136,13 @@
       <p>W5723 Lake View Chester, CA 96020</p>
       <p>Design by <span>Papaya.</span></p>
       <div class="social-media">
-        <img src="img/facebook.svg" alt="" />
-        <img src="img/twitter.svg" alt="" />
-        <img src="img/instagram.svg" alt="" />
+        <a href="https://www.facebook.com/"
+          ><img src="img/facebook.svg" alt=""
+        /></a>
+        <a href="https://twitter.com/"><img src="img/twitter.svg" alt="" /></a>
+        <a href="https://www.instagram.com/"
+          ><img src="img/instagram.svg" alt=""
+        /></a>
       </div>
       <p class="copyright">&copy; Camp Chippewa</p>
     </footer>
